@@ -62,6 +62,7 @@ suite = unittest.TestLoader().loadTestsFromNames(
      'tests.test_rfc8018.suite',
      'tests.test_rfc8103.suite',
      'tests.test_rfc8226.suite',
+     'tests.test_rfc8398.suite',
      'tests.test_rfc8410.suite',
      'tests.test_rfc8418.suite',
      'tests.test_rfc8494.suite',
