@@ -34,6 +34,8 @@ Revision 0.2.7, released XX-09-2019
 - Added RFC6210 providing Experiment for Hash Functions with Parameters
 - Added RFC5751 providing S/MIME Version 3.2 Message Specification
 - Added RFC8494 providing Multicast Email (MULE) over ACP 142
+- Added RFC8398 providing Internationalized Email Addresses in
+  X.509 Certificates
 
 Revision 0.2.6, released 31-07-2019
 -----------------------------------
